<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    android:background="@drawable/bg_line_3336dff_ff9ffd2ff"
    android:orientation="vertical"
    android:padding="@dimen/dp_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/dp_6"
            android:text="taozi"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/good_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_6"
            android:padding="@dimen/dp_6"
            android:text="总金额"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:text="3333"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/user_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:text="3333"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/user_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:text="3333"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/user_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:text="备注"
        android:textSize="@dimen/sp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/good_status_payed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_line_3336dff_ff9ffd2ff"
            android:paddingLeft="@dimen/dp_8"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/no_payed"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/good_status_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_6"
            android:background="@drawable/bg_line_3336dff_ff9ffd2ff"
            android:paddingLeft="@dimen/dp_8"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/no_taken"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/good_status_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_12"
            android:background="@drawable/bg_line_3336dff_ff9ffd2ff"
            android:paddingLeft="@dimen/dp_8"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/uncompleted"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

</LinearLayout>